weather-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-service
spec:
  selector:
    app: weather-app
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
