weather-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: weather.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weather-service
            port:
              number: 5000
